<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">APlane</string>
    <string name="app_ak_widget">APlane</string>
    <string name="exit_title">退出APlane</string>
    <string name="exit_msg">您确定退出APlane？</string>
    <string name="app_logout_title">注销帐户</string>
    <string name="app_logout_msg">您确定注销帐户？</string>
    <string name="my_profile">我的微博</string>
    <string name="hot_category">推荐用户分类</string>
    <string name="hot_user">推荐用户</string>
    <string name="hot_status_category">精选微博分类</string>
    <string name="hot_status">精选微博</string>
    <string name="opb_delete">删除</string>
    <string name="opb_favorite">收藏</string>
    <string name="opb_comment">评论</string>
    <string name="opb_origin_text">原文</string>
    <string name="opb_repost">转发</string>
    <string name="opb_quick_repost">快速转发</string>
    <string name="opb_quick_comment">快速评论</string>
    <string name="opb_anim">动画</string>
    <string name="opb_user">用户</string>
    <string name="opb_follow">关注</string>
    <string name="opb_user_info">资料</string>
    <string name="opb_user_status">他的微博</string>
    <string name="opb_unfollow">取消关注</string>
    <string name="opb_follows">粉丝列表</string>
    <string name="opb_friends">关注列表</string>
    <string name="opb_reply_comment">回复评论</string>
    <string name="opb_destroy_comment">删除评论</string>
    <string name="opb_destroy_batch_comment">批量删除</string>
    <string name="opb_at">\@他</string>
    <string name="opb_more_content">内容处理</string>
    <string name="opb_more_content_copy_status">复制原微博内容</string>
    <string name="opb_more_content_copy_ret_status">复制转发内容</string>
    <string name="opb_more_view_ret_status">查看转发微博原文</string>
    <string name="opb_refresh">刷新</string>
    <string name="opb_reply_dm">回复私信</string>
    <string name="opb_destroy_dm">删除私信</string>
    <string name="opb_destroy_status">删除微博</string>
    <string name="opb_destroy_batch">批量删除</string>
    <string name="opb_destroy_fav">删除收藏</string>
    <string name="opb_shield_one">屏蔽当前@的微博</string>
    <string name="opb_shield_all">屏蔽此微博@我</string>
    <string name="opb_comment_status">微博原文</string>
    <string name="opb_account_set_default">设为默认</string>
    <string name="opb_account_delete">删除帐户</string>
    <string name="opb_draft_edit">编辑草稿</string>
    <string name="opb_draft_delete">删除草稿</string>
    <string name="opb_task_edit">编辑任务</string>
    <string name="opb_task_delete">删除任务</string>
    <string name="opb_task_delete_all">删除所有任务</string>
    <string name="opb_task_restart">重新执行任务</string>
    <string name="menu_delete">删除</string>
    <string name="menu_invert_selection">反选</string>
    <string name="opb_more_hint">更多</string>
    <string name="more">加载更多</string>
    <string name="more_loaded_failed">加载失败!</string>
    <string name="more_add_account_user">添加帐户</string>
    <string name="more_add_status">新建微博</string>
    <string name="network_error">网络连接失败!</string>
    <string name="list_pre_empty_txt">数据加载中...</string>
    <string name="list_empty_txt">没有数据,下拉刷新！</string>
    <string name="profile_edit">编辑</string>
    <string name="profile_refresh">刷新</string>
    <string name="profile_test_city">福建</string>
    <string name="address">地址</string>
    <string name="login_name">登录名</string>
    <string name="friends">关注</string>
    <string name="favourites">收藏</string>
    <string name="statuses">微博</string>
    <string name="followers">粉丝</string>
    <string name="topics">话题</string>
    <string name="user_info">资料</string>
    <string name="user_id_error">用户id不正确，需要先获取用户资料!</string>
    <string name="profile_update_group">更新分组</string>
    <string name="profile_dialog_title">下载@好友</string>
    <string name="profile_get_friend">下载@好友</string>
    <string name="about">关于</string>
    <string name="about_3dparty_title">第三方软件</string>
    <string name="about_changelog_title">修改日志</string>
    <string name="about_app_ver_label">版本</string>
    <string name="about_app_author_label">作者</string>
    <string name="about_app_author">官方微博</string>
    <string name="about_app_email_label">邮箱</string>
    <string name="about_app_email">archko@sina.com</string>
    <string name="about_app_follow_label">关注作者微博</string>
    <string name="about_app_home_page_label">程序主页</string>
    <string name="about_app_home_page">https://github.com/archko/akwbo</string>
    <string name="about_app_play">Play商店</string>
    <string name="about_app_play_url">https://play.google.com/store/apps/details?id=cn.archko.microblog</string>
    <string name="about_app_home">Home</string>
    <string name="about_app_home_url">https://github.com/archko/akwbo</string>
    <string name="about_app_author_url">http://weibo.com/u/2532909203</string>
    <string name="about_app_suggesst_label">在微博上推荐APlane</string>
    <string name="about_app_suggesst">
        我安装了APlane新版:v%s,相当不错,您也装一个:https://play.google.com/store/apps/details?id=cn.archko.microblog
    </string>
    <string name="about_app_mic_label">其它杂项</string>
    <string name="about_app_plan">近期计划：</string>
    <string name="about_app_plan_content">多图上传,上传功能的完善!</string>
    <string name="about_app_about">关于其中一些功能：</string>
    <string name="about_app_about_function">私信未完成默认不会显示，可以在配置中打开，而且不能随意发出私信，在完善后可以使用自定义的拥有私信权限的key来处理。</string>
    <string name="about_app_chk_update">检测更新</string>
    <string name="about_app_feedback">编写更多反馈内容</string>
    <string name="about_app_feedback_url">https://github.com/archko/akwbo</string>
    <string name="account_change">切换帐户</string>
    <string name="account_change_dialog_title">切换帐户</string>
    <string name="account_change_dialog_msg">正在切换帐户！</string>
    <string name="account_change_suc">切换帐户成功！</string>
    <string name="account_change_failed">切换帐户失败！</string>
    <string name="account_delete_dialog_title">删除帐户</string>
    <string name="account_delete_dialog_msg">正在删除帐户！</string>
    <string name="account_delete_suc">删除帐户成功！</string>
    <string name="account_delete_failed">删除帐户失败！</string>
    <string name="account_add_dialog_title">添加帐户</string>
    <string name="account_add_dialog_msg">正在添加帐户！</string>
    <string name="account_add_suc">添加帐户成功！</string>
    <string name="account_add_failed">添加帐户失败！</string>
    <string name="follow">关注</string>
    <string name="at">\@他</string>
    <string name="test_status"></string>
    <string name="test_num">100</string>
    <string name="user_view_user">查看用户</string>
    <string name="unfollow">取消关注</string>
    <string name="send_direct_msg">发私信</string>
    <string name="user_lastest_status">最新微博</string>
    <string name="user_other_info">其它信息</string>
    <string name="test_email"></string>
    <string name="user_remark">备注</string>
    <string name="user_domain">域名</string>
    <string name="user_create_at">创建时间</string>
    <string name="user_url">博客</string>
    <string name="user_gender">性别</string>
    <string name="user_loc">所在地</string>
    <string name="user_male">男</string>
    <string name="user_female">女</string>
    <string name="user_unknown">未知</string>
    <string name="user_followers">粉丝：</string>
    <string name="user_friends">关注：</string>
    <string name="pull_to_refresh_label">更新于：</string>
    <string name="task_status">新微博:</string>
    <string name="task_repost">新转发:</string>
    <string name="task_comment">新评论:</string>
    <string name="task_favorite">新收藏:</string>
    <string name="task_ori_text">原文:</string>
    <string name="task_err_header">处理失败:</string>
    <string name="task_err_code"> 错误代码:</string>
    <string name="task_err_msg"> 异常:</string>
    <string name="task_in_progress">状态:等待完成!</string>
    <string name="text_repost">转发</string>
    <string name="text_comment">评论</string>
    <string name="text_time">一小时前</string>
    <string name="text_from">来自:</string>
    <string name="text_quick_comment_hint">快速评论</string>
    <string name="image_activity_not_found">没有找到查看图片的程序</string>
    <string name="text_title_content">微博正文</string>
    <string name="text_view_comments">查看评论->右侧滑动</string>
    <string name="text_view_status_more">更多内容操作</string>
    <string name="text_view_status_steal">偷微博</string>
    <string name="text_shield_suc">屏蔽成功</string>
    <string name="text_shield_failed">屏蔽失败</string>
    <string name="comment_status_not_found">无法获取微博信息!</string>
    <string name="comment_btn">评论</string>
    <string name="comment_and_post_btn">评论且发布</string>
    <string name="comment_retweet_btn">评论原微博</string>
    <string name="comment_dialog_title">回复评论</string>
    <string name="content_is_null">内容不能为空!</string>
    <string name="in_progress">正在处理中,请稍候.</string>
    <string name="repost_btn">转发</string>
    <string name="repost_to_btn">同时评论给</string>
    <string name="text_copy_status">微博原文复制到剪切版！</string>
    <string name="text_copy_ret_status">微博转发内容复制到剪切版！</string>
    <string name="show_in_gallery">图库显示</string>
    <string name="show_big_img">显示大图</string>
    <string name="download_ori_img">下载原图</string>
    <string name="comment_reply_start">开始回复评论，请稍候！</string>
    <string name="comment_reply_suc">回复评论成功！</string>
    <string name="comment_reply_failed">回复评论失败！</string>
    <string name="comment_reply_token_isexpired">Token过期了，需要重新认证，不能评论！</string>
    <string name="new_status">发微博</string>
    <string name="new_no_sdcard">没有 SD 卡</string>
    <string name="new_take_photo">拍照</string>
    <string name="new_pick_photo">从相册中选择</string>
    <string name="new_back">返回</string>
    <string name="new_photo_picker_not_found">Photo Picker not found</string>
    <string name="new_status_should_not_null">请输入要发表的微博内容!</string>
    <string name="new_status_posting">正在发表微博，请稍等！</string>
    <string name="new_status_capture">照片</string>
    <string name="new_status_loc">位置</string>
    <string name="new_status_drafts">草稿</string>
    <string name="new_status_trend">#</string>
    <string name="new_status_emo">表情</string>
    <string name="new_status_at">\@</string>
    <string name="new_status_token_invalid">Token过期，此次操作耗时较长!</string>
    <string name="new_status_cancel">点错了</string>
    <string name="new_status_save_draft">存稿</string>
    <string name="new_status_exit">退出</string>
    <string name="new_status_too_more_txt">字数超出限制，截断了!</string>
    <string name="new_status_img_crop">裁剪</string>
    <string name="new_status_img_rotate">旋转</string>
    <string name="new_status_img_filter">滤镜</string>
    <string name="new_status_img_edit">编辑</string>
    <string name="share_in_weibo">APlane共享</string>
    <string name="text_count">140</string>
    <string name="text_hint">可以输入140个文字.</string>
    <string name="text_new_status">发表新微博</string>
    <string name="txt_pick_photo">选择照片</string>
    <string name="text_exceed_max_num">超过了140个文字.</string>
    <string name="text_repost_num">转发 %s</string>
    <string name="text_comment_num">评论 %s</string>
    <string name="text_come_from">来自：%s</string>
    <string name="say_something">说点什么吧&#8230;</string>
    <string name="send_comment">评论</string>
    <string name="send_and_comment">评论并发表微博</string>
    <string name="repost_status">转发</string>
    <string name="login">登录</string>
    <string name="login2">授权登录</string>
    <string name="exit">退出</string>
    <string name="regist">注册</string>
    <string name="login_show_webview">显式认证</string>
    <string name="oauth_selector_msg">显式认证在过期后不能自动处理，优先使用授权按钮！</string>
    <string name="login_user_hint">邮箱/会员帐号/手机号</string>
    <string name="action_new_status">发微博</string>
    <string name="action_home_user">私人地盘</string>
    <string name="action_at_author">微博反馈</string>
    <string name="action_pref">设置</string>
    <string name="action_logout">注销</string>
    <string name="action_mode_standard">隐藏标签</string>
    <string name="action_about">关于</string>
    <string name="action_account_user_manager">帐户和草稿</string>
    <string name="action_update">检测更新</string>
    <string name="action_exit">退出</string>
    <string name="action_search">搜索</string>
    <string name="action_task">任务队列</string>
</resources>