<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:layout_height="fill_parent" android:layout_width="fill_parent"
    android:fillViewport="true"
    android:scrollbars="none" style="?attr/bgView">
    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent" android:layout_marginBottom="8dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginTop="10dip" android:layout_gravity="center_horizontal"
            android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/iv_logo"
                android:layout_marginLeft="60dp"
                android:src="@drawable/logo"
                android:layout_width="60dp"
                android:layout_height="60dp"/>

            <TextView android:id="@+id/version_label"
                android:layout_toRightOf="@id/iv_logo"
                android:layout_marginTop="18dp"
                android:paddingLeft="10dp" android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text="@string/about_app_ver_label"
                android:textColor="?attr/textColorItemTitle"
                android:gravity="center_vertical"/>

            <TextView android:id="@+id/version"
                android:layout_toRightOf="@id/iv_logo" android:layout_below="@id/version_label"
                android:layout_marginTop="8dp"
                android:paddingLeft="10dp" android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:text=""
                android:textColor="?attr/textColorItemTitle"
                android:gravity="center_vertical"/>
        </RelativeLayout>

        <!-- author -->
        <LinearLayout android:layout_marginTop="10dp"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:layout_width="fill_parent" android:layout_height="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent" android:text="@string/about_app_author_label"
                android:textColor="?attr/textColorItemTitle"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:text="@string/about_app_author"
                android:textColor="?attr/textColorItemNum"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <include layout="@layout/ak_colorstrip"/>

        <!-- email -->
        <LinearLayout
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:layout_width="fill_parent" android:layout_height="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent" android:text="@string/about_app_email_label"
                android:textColor="?attr/textColorItemTitle"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:text="@string/about_app_email"
                android:textColor="?attr/textColorItemNum"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <include layout="@layout/ak_colorstrip"/>

        <!-- store -->
        <LinearLayout
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent" android:text="@string/about_app_play"
                android:textColor="?attr/textColorItemTitle"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:text="@string/about_app_play_url"
                android:textColor="?attr/textColorItemNum"
                android:autoLink="all"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <include layout="@layout/ak_colorstrip"/>

        <!-- home -->
        <LinearLayout
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent" android:text="@string/about_app_home"
                android:textColor="?attr/textColorItemTitle"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:text="@string/about_app_home_url"
                android:textColor="?attr/textColorItemNum"
                android:autoLink="all"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <include layout="@layout/ak_colorstrip"/>

        <Button android:id="@+id/follow_btn"
            android:layout_marginTop="6dp"
            style="?attr/holoButtonStyle" android:layout_gravity="center_horizontal"
            android:text="@string/about_app_follow_label"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
            android:layout_width="fill_parent" android:layout_height="wrap_content"/>

        <Button android:id="@+id/sugguest_btn"
            style="?attr/holoButtonStyle" android:layout_gravity="center_horizontal"
            android:text="@string/about_app_suggesst_label"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
            android:layout_width="fill_parent" android:layout_height="wrap_content"/>

        <Button android:id="@+id/chk_udpate_btn"
            style="?attr/holoButtonStyle" android:layout_gravity="center_horizontal"
            android:text="@string/about_app_chk_update"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
            android:layout_width="fill_parent" android:layout_height="wrap_content"/>

        <Button android:id="@+id/feedback_btn"
            style="?attr/holoButtonStyle" android:layout_gravity="center_horizontal"
            android:text="@string/about_app_feedback" android:visibility="gone"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
            android:layout_width="fill_parent" android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="8dp"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/about_app_plan"
            android:textColor="?attr/textColorItemTitle"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_marginTop="4dp"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/about_app_plan_content"
            android:textColor="?attr/textColorItemTitle"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_marginTop="6dp"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/about_app_about"
            android:textColor="?attr/textColorItemTitle"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_marginTop="4dp"
            android:paddingLeft="10dp" android:paddingRight="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="@string/about_app_about_function"
            android:textColor="?attr/textColorItemTitle"
            android:gravity="center_vertical"/>

    </LinearLayout>
</ScrollView>
	
