<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="match_parent" android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:gravity="center_horizontal"
    >

    <TextView android:id="@+id/title"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/app_name" android:padding="4dip"
        android:gravity="center" android:textSize="20sp"
        android:textColor="@color/yellow"/>

    <TextView
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="app key是从网上搜集来的." android:padding="4dip"
        android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
        android:textColor="@color/yellow"/>

    <Spinner android:id="@+id/app_group"
        android:contentDescription=""
        android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText android:id="@+id/email" android:hint="@string/login_user_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress|text"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/test_email" android:padding="4dip"
        android:layout_marginTop="18dip" android:textColor="@color/holo_light_item_status"
        android:layout_marginLeft="20dip" android:layout_marginRight="20dip"
        android:windowSoftInputMode="stateHidden"/>

    <EditText android:id="@+id/pwd"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:inputType="textPassword" android:text=""
        android:padding="4dip" android:textColor="@color/holo_light_item_status"
        android:layout_marginBottom="0dip" android:layout_marginTop="8dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip" android:windowSoftInputMode="stateHidden"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="8dip">

        <Button android:id="@+id/login2"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/login2" android:layout_weight="1"
            android:layout_marginLeft="20dip"/>

        <Button android:id="@+id/exit" android:layout_weight="1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_marginRight="20dip"/>
    </LinearLayout>

    <TextView android:visibility="visible"
        android:text="@string/oauth_selector_msg"
        android:padding="4dip" android:textSize="12sp" android:textColor="@color/red"
        android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"
        android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="8dip">

        <Button android:id="@+id/btn" android:visibility="gone"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/login" android:layout_weight="1"
             android:layout_marginLeft="20dip"/>

        <Button android:id="@+id/login_show_webview_btn" android:visibility="visible"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/login_show_webview" android:layout_weight="1"
            android:layout_marginRight="20dp"
             android:layout_marginLeft="20dip"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>
