<?xml version="1.0" encoding="utf-8"?>
<!--评价布局-->
<com.bulletnoid.android.widget.SwipeAwayLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription" android:id="@+id/root"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

        <EditText android:id="@+id/status_comment_content"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:textSize="14sp"
            android:lines="8" android:hint="@string/text_hint" android:gravity="top|left"/>

        <RelativeLayout android:id="@+id/status_bar"
            android:layout_below="@id/status_comment_content"
            android:layout_width="match_parent" android:layout_height="@dimen/bottom_action_bar_height2"
            android:layout_marginTop="0dip">

            <TextView android:id="@+id/char_num"
                android:layout_width="64dip"
                android:layout_height="match_parent" android:text="@string/text_count"
                android:layout_alignParentRight="true" android:padding="2dip"
                android:gravity="center" android:textColor="@color/red"/>

            <LinearLayout android:id="@+id/opera_bar" android:layout_toLeftOf="@id/char_num"
                android:layout_width="match_parent" android:layout_height="@dimen/bottom_action_bar_height2"
                android:layout_gravity="bottom" android:layout_marginBottom="0dip">

                <!--<Button android:id="@+id/comment_btn"
                    android:text="@string/comment_btn"
                    android:layout_weight="1" android:gravity="center"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>

                <Button android:id="@+id/comment_retweet_btn"
                    android:text="@string/comment_retweet_btn"
                    android:layout_weight="1" android:gravity="center"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>

                <Button android:id="@+id/comment_and_post_btn" android:visibility="gone"
                    android:text="@string/comment_and_post_btn"
                    android:layout_weight="1" android:gravity="center"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>-->

                <Button android:id="@+id/btn_trend"
                    android:text="@string/new_status_trend"
                    android:layout_weight="1" android:gravity="center"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>

                <Button android:id="@+id/btn_emo" android:visibility="visible"
                    android:text="@string/new_status_emo" android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>

                <Button android:id="@+id/btn_at"
                    android:text="@string/new_status_at"
                    android:layout_weight="1" android:gravity="center"
                    android:layout_width="match_parent" android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>
        <cn.archko.microblog.view.EmojiPanelView android:layout_below="@id/status_bar"
            android:id="@+id/emoji_panel" android:visibility="gone"
            android:layout_width="match_parent" android:layout_height="match_parent"/>
    </RelativeLayout>

    <ScrollView android:scrollbars="none" android:fadingEdge="none"
        android:layout_width="match_parent" android:layout_height="match_parent">
        <include layout="@layout/status_repost_comment"/>
    </ScrollView>
</LinearLayout>
</com.bulletnoid.android.widget.SwipeAwayLayout>